codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__exec_cell_shell_kill.snap
---
source: tui/src/history_cell.rs
assertion_line: 1609
expression: rendered
---
● Shell Shell Kill
  └ shell terminated
