codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__exec_cell_shell_log.snap
---
source: tui/src/history_cell.rs
assertion_line: 1588
expression: rendered
---
● Shell Shell Log
    Ctrl+R to run in background
