codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__exec_cell_shell_summary.snap
---
source: tui/src/history_cell.rs
assertion_line: 1570
expression: rendered
---
● Shell Shell Summary
    Ctrl+R to run in background
