codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: tui/src/history_cell.rs
assertion_line: 2102
expression: rendered
---
● Shell echo one
  │ echo two
  └ (no output)
