codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multiline_command_wraps_with_extra_indent_on_subsequent_lines.snap
---
source: tui/src/history_cell.rs
assertion_line: 2045
expression: rendered
---
● Shell set -o pipefail
  │ cargo test
  │ --all-features --quiet
  └ (no output)
