codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 2210
expression: rendered
---
● Shell echo
  │ this_is_a_very_long_
  │ single_token_that_wi
  │ … +2 lines
  └ error: first line on
    stderr
    error: second line on
    stderr
