codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__single_line_command_compact_when_fits.snap
---
source: tui/src/history_cell.rs
assertion_line: 2064
expression: rendered
---
● Shell echo ok
  └ (no output)
