codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__single_line_command_wraps_with_four_space_continuation.snap
---
source: tui/src/history_cell.rs
assertion_line: 2083
expression: rendered
---
● Shell a_very_long_toke
  │ n_without_spaces
  │ _to_force_wrappi
  │ … +1 lines
  └ (no output)
