codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__stderr_tail_more_than_five_lines_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 2164
expression: rendered
---
● Shell seq 1 10 1>&2 && false
  └ 1
    2
    … +6 lines
    9
    10
